--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,3 +1,14 @@
 body {
+  @extend %quicksand-500;
+  font-size: 16px;
+  line-height: 26px;
+  color: $default;
+  background-color: #fff;
   min-height: 100dvh;
+}
+
+.container {
+  max-width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
 }
