--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,14 +1,4 @@
 @font-face {
-  font-family: 'Quicksand-Medium', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  src: local('Quicksand-Medium'),
-    url('../fonts/Quicksand-Medium.woff2') format('woff2'),
-    url('../fonts/Quicksand-Medium.woff') format('woff');
-  font-display: swap;
-}
-
-@font-face {
   font-family: 'Quicksand-Regular', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -19,12 +9,32 @@
 }
 
 @font-face {
+  font-family: 'Quicksand-Medium', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  src: local('Quicksand-Medium'),
+    url('../fonts/Quicksand-Medium.woff2') format('woff2'),
+    url('../fonts/Quicksand-Medium.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
   font-family: 'Roboto-Regular', sans-serif;
   font-style: normal;
   font-weight: 400;
   src: local('Roboto-Regular'),
     url('../fonts/Roboto-Regular.woff2') format('woff2'),
     url('../fonts/Roboto-Regular.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto-Medium', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  src: local('Roboto-Regular'),
+    url('../fonts/Roboto-Medium.woff2') format('woff2'),
+    url('../fonts/Roboto-Medium.woff') format('woff');
   font-display: swap;
 }
 
