--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,10 +1,20 @@
+html,
+body {
+  height: 100%;
+}
+
 body {
   @extend %quicksand-500;
   font-size: 16px;
   line-height: 26px;
   color: $default;
   background-color: #fff;
-  min-height: 100dvh;
+  display: flex;
+  flex-direction: column;
+}
+
+.main {
+  flex-grow: 1;
 }
 
 .container {
