--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,6 +3,8 @@
 @import 'reset';
 @import 'global';
 
+// header
+
 .nav {
   height: 110px;
   display: flex;
@@ -17,7 +19,7 @@
   &__link {
     @extend %roboto-400;
     color: $title;
-    padding: 0 2px 8px;
+    padding: 0 2px 1px;
     text-transform: uppercase;
     position: relative;
     transition: color 0.5s ease;
@@ -61,12 +63,14 @@
   &__link {
     position: relative;
 
-    & path {
+    path {
       transition: fill 0.5s ease;
     }
 
-    &:hover path {
-      fill: $accent;
+    &:hover {
+      path {
+        fill: $accent;
+      }
     }
   }
 
@@ -82,6 +86,115 @@
     height: 20px;
     border-radius: 50%;
     text-align: center;
+  }
+}
+
+// footer
+
+.footer {
+  background-color: $bg;
+
+  &__top {
+    display: flex;
+    gap: 30px;
+    padding: 75px 0 40px;
+  }
+
+  &__item-contacts {
+    width: 250px;
+    margin-right: 20px;
+  }
+
+  &__item-nav {
+    width: 170px;
+  }
+
+  &__item-form {
+    max-width: 470px;
+  }
+
+  &__logo {
+    margin-bottom: 33px;
+  }
+
+  &__address,
+  &__email,
+  &__phone,
+  &__list-item:not(:last-child) {
+    margin-bottom: 14px;
+  }
+
+  &__phone {
+    margin-bottom: 30px;
+  }
+
+  &__title {
+    @extend %roboto-500;
+    font-size: 22px;
+    line-height: 1;
+    color: $title;
+    margin-bottom: 50px;
+  }
+
+  &__text {
+    margin-bottom: 25px;
+  }
+
+  &__input {
+    max-width: 320px;
+    width: 100%;
+    background-color: #fff;
+    padding: 12px 10px 12px 15px;
+    box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+
+    &::placeholder {
+      @extend %quicksand-500;
+      font-size: 16px;
+      color: $default;
+    }
+  }
+
+  &__btn {
+    @extend %roboto-400;
+    text-transform: uppercase;
+    background-color: $accent;
+    color: #fff;
+    padding: 12px 18px;
+    margin-left: 5px;
+    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+  }
+
+  &__bottom {
+    height: 75px;
+    font-size: 12px;
+    border-top: 1px solid #ececec;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__accept {
+    display: flex;
+    gap: 0 25px;
+  }
+}
+
+.social {
+  display: flex;
+  gap: 0 20px;
+  align-items: center;
+
+  &__link {
+    path {
+      transition: fill 0.5s ease;
+      fill: $default;
+    }
+
+    &:hover {
+      path {
+        fill: $accent;
+      }
+    }
   }
 }
 
