fix header menu

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -27,7 +27,7 @@
     &:hover {
       color: $accent;
     }
-
+    
     &::before {
       content: '';
       width: 0;
@@ -39,8 +39,9 @@
       background-color: $accent;
       transition: width 0.5s ease;
     }
-
+    
     &--active {
+      @extend %roboto-700;
       color: $accent;
     }
 
@@ -88,6 +89,10 @@
     text-align: center;
   }
 }
+
+// top
+
+
 
 // footer
 
