--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -22,3 +22,12 @@ body {
   padding: 0 15px;
   margin: 0 auto;
 }
+
+%btn {
+  @extend %roboto-400;
+  color: #fff;
+  background-color: $accent;
+  padding: 12px 26px;
+  text-transform: uppercase;
+  box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+}
