--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'fonts';
 @import 'reset';
+@import 'libs';
 @import 'global';
 
 // header
@@ -27,7 +28,7 @@
     &:hover {
       color: $accent;
     }
-    
+
     &::before {
       content: '';
       width: 0;
@@ -39,7 +40,7 @@
       background-color: $accent;
       transition: width 0.5s ease;
     }
-    
+
     &--active {
       @extend %roboto-700;
       color: $accent;
@@ -91,6 +92,104 @@
 }
 
 // top
+
+.top {
+  background-color: $bg;
+  background-image: url('../images/decor/top-decor.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 65px;
+
+  &__container {
+    max-width: 1520px;
+    padding-left: 175px;
+  }
+
+  &__item {
+    &-inner {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+
+  &__item-content {
+    max-width: 670px;
+    padding-top: 125px;
+  }
+
+  &__title {
+    @extend %roboto-700;
+    font-size: 58px;
+    line-height: 68px;
+    color: $title;
+    margin-bottom: 35px;
+  }
+
+  &__text {
+    max-width: 470px;
+    margin-bottom: 55px;
+  }
+
+  &__link {
+    @extend %btn;
+    padding: 14px 44px;
+  }
+
+  .slick-dots {
+    display: flex;
+    justify-content: center;
+    gap: 0 5px;
+    position: absolute;
+    bottom: 40px;
+    max-width: 1170px;
+    width: 100%;
+
+    li {
+      button {
+        font-size: 0;
+        width: 26px;
+        height: 26px;
+        border: 1px solid transparent;
+        border-radius: 50%;
+        transition: border-color 0.5s ease;
+        position: relative;
+
+        &::before {
+          content: '';
+          width: 6px;
+          height: 6px;
+          border-radius: 50%;
+          background-color: $default;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          transition: backgound-color 0.5s ease;
+        }
+
+        &:hover {
+          border: 1px solid $accent;
+        }
+
+        &:hover::before {
+          background-color: $accent;
+        }
+      }
+
+      &.slick-active {
+        button {
+          border: 1px solid $accent;
+
+          &::before {
+            background-color: $accent;
+          }
+        }
+      }
+    }
+  }
+}
+
+// categories
 
 
 
@@ -160,13 +259,8 @@
   }
 
   &__btn {
-    @extend %roboto-400;
-    text-transform: uppercase;
-    background-color: $accent;
-    color: #fff;
-    padding: 12px 18px;
+    @extend %btn;
     margin-left: 5px;
-    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
   }
 
   &__bottom {
