--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -23,11 +23,62 @@ body {
   margin: 0 auto;
 }
 
-%btn {
+.link {
   @extend %roboto-400;
-  color: #fff;
-  background-color: $accent;
-  padding: 12px 26px;
+  color: $title;
+  padding: 0 2px 1px;
   text-transform: uppercase;
-  box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+  position: relative;
+  transition: color 0.5s ease;
+
+  &:hover {
+    color: $accent;
+  }
+
+  &::before {
+    content: '';
+    width: 0;
+    height: 1px;
+    position: absolute;
+    left: auto;
+    right: 0;
+    bottom: 0;
+    background-color: $accent;
+    transition: width 0.5s ease;
+  }
+
+  &--active {
+    @extend %roboto-700;
+    color: $accent;
+  }
+
+  &--active::before {
+    width: 100%;
+  }
+
+  &:hover::before {
+    width: 100%;
+    right: auto;
+    left: 0;
+  }
+}
+
+.title {
+  @extend %roboto-700;
+  font-size: 48px;
+  line-height: 65px;
+  color: $title;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.text {
+  text-align: center;
+  max-width: 570px;
+  margin: 0 auto 55px;
+}
+
+.section {
+  padding: 115px 0;
 }
