--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -27,3 +27,20 @@ $bg: #f6f6f6;
   font-family: 'Roboto-Bold', sans-serif;
   font-weight: 700;
 }
+
+%btn {
+  @extend %roboto-400;
+  color: #fff;
+  background-color: $accent;
+  padding: 12px 26px;
+  text-transform: uppercase;
+  box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+}
+
+@function max($numbers...) {
+  @return m#{a}x(#{$numbers});
+}
+
+@function min($numbers...) {
+  @return m#{i}n(#{$numbers});
+}
