--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,46 +16,6 @@
 .menu {
   display: flex;
   gap: 0 35px;
-
-  &__link {
-    @extend %roboto-400;
-    color: $title;
-    padding: 0 2px 1px;
-    text-transform: uppercase;
-    position: relative;
-    transition: color 0.5s ease;
-
-    &:hover {
-      color: $accent;
-    }
-
-    &::before {
-      content: '';
-      width: 0;
-      height: 1px;
-      position: absolute;
-      left: auto;
-      right: 0;
-      bottom: 0;
-      background-color: $accent;
-      transition: width 0.5s ease;
-    }
-
-    &--active {
-      @extend %roboto-700;
-      color: $accent;
-    }
-
-    &--active::before {
-      width: 100%;
-    }
-
-    &:hover::before {
-      width: 100%;
-      right: auto;
-      left: 0;
-    }
-  }
 }
 
 .user-nav {
@@ -191,7 +151,346 @@
 
 // categories
 
+.categories {
+  background-image: url('../images/decor/categories-decor-left.png');
+  background-repeat: no-repeat;
+  background-position: center left;
 
+  &__inner {
+    background-image: url('../images/decor/categories-decor-right.png');
+    background-repeat: no-repeat;
+    background-position: center right;
+  }
+
+  &__info {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 110px;
+    position: relative;
+    z-index: 5;
+
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      z-index: 0;
+    }
+
+    &::before {
+      left: -45px;
+      top: -40px;
+      width: 120px;
+      height: 121px;
+      background-image: url('../images/decor/categories-circle.svg');
+    }
+
+    &::after {
+      width: 65px;
+      height: 52px;
+      bottom: -24px;
+      right: -24px;
+      background-image: url('../images/decor/categories-square.svg');
+    }
+  }
+
+  &__info-item {
+    flex-basis: 370px;
+    box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+    padding: 160px 30px 60px;
+    background-color: #fff;
+    position: relative;
+    z-index: 1;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 60px;
+      left: 40px;
+      width: 60px;
+      height: 60px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      z-index: 2;
+    }
+  }
+
+  &__info-item--truck::before {
+    background-image: url('../images/icons/truck.jpg');
+  }
+
+  &__info-title {
+    @extend %roboto-400;
+    font-size: 22px;
+    color: $title;
+    margin-bottom: 10px;
+  }
+
+  &__info-item--time::before {
+    background-image: url('../images/icons/time.jpg');
+  }
+
+  &__info-item--support::before {
+    background-image: url('../images/icons/support.jpg');
+  }
+
+  &__list {
+    display: grid;
+    min-height: 635px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 30px;
+  }
+
+  &__item {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 30px;
+  }
+
+  &__item:first-child {
+    grid-row: span 2;
+
+    .categories__subtitle,
+    .categories__link:hover {
+      color: #5800e4;
+    }
+
+    .categories__link::before {
+      background-color: #5800e4;
+    }
+  }
+
+  &__item:nth-child(2) {
+    grid-column: span 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+
+    .categories__subtitle {
+      color: $accent;
+    }
+  }
+
+  &__item:nth-child(3) {
+
+    .categories__subtitle,
+    .categories__link:hover {
+      color: #ffb534;
+    }
+
+    .categories__link::before {
+      background-color: #ffb534;
+    }
+  }
+
+  &__item:last-child {
+
+    .categories__subtitle,
+    .categories__link:hover {
+      color: #34c3ff;
+    }
+
+    .categories__link::before {
+      background-color: #34c3ff;
+    }
+  }
+
+  &__subtitle {
+    margin-bottom: 5px;
+  }
+
+  &__title {
+    font-size: 22px;
+    color: $title;
+    margin-bottom: 10px;
+  }
+
+  &__link {
+    padding: 0 0 1px;
+  }
+}
+
+// video
+
+.video {
+  background-color: $bg;
+  background-image: url('../images/decor/video-bg.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+
+  &__inner {
+    display: flex;
+    align-items: center;
+    gap: 30px 60px;
+  }
+
+  &__play {
+    max-width: 540px;
+    width: 100%;
+    height: 480px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+
+  &__content {
+    max-width: 570px;
+  }
+
+  &__subtitle {
+    font-size: 22px;
+    color: $accent;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+  }
+
+  &__title,
+  &__text {
+    text-align: left;
+  }
+
+  &__link {
+    @extend %btn;
+  }
+}
+
+// products
+
+.product {
+  text-align: center;
+
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 45px 30px;
+    margin-bottom: 55px;
+  }
+
+  &__link {
+    @extend %btn;
+    box-shadow: none;
+    background-color: transparent;
+    color: $title;
+    border: 1px solid $accent;
+  }
+}
+
+.product-item {
+
+  &--sale {
+    .product-item__box::before {
+      content: 'sale';
+      position: absolute;
+      @extend %btn;
+      left: 25px;
+      top: 25px;
+      line-height: 1;
+    }
+  }
+
+  &__box {
+    position: relative;
+    overflow: hidden;
+    height: 370px;
+    margin-bottom: 25px;
+
+    &:hover {
+      .product-item__links-box {
+        transform: translateY(0);
+      }
+    }
+  }
+
+  &__img {
+    object-fit: cover;
+  }
+
+  &__links-box {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: absolute;
+    bottom: 50px;
+    background-color: #fff;
+    box-shadow: 0px 5px 30px 0px rgba(152, 152, 152, 0.2);
+    left: 0;
+    right: 0;
+    width: 220px;
+    height: 50px;
+    margin: 0 auto;
+    border-radius: 22px;
+    transform: translateY(400%);
+    transition: transform 0.5s ease;
+  }
+
+  &__btn {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    path {
+      transition: fill 0.5s ease;
+    }
+
+    &:hover path {
+      fill: $accent;
+    }
+  }
+
+  &__btn--line::before,
+  &__btn--line::after {
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: 30px;
+    background-color: #ececec;
+    top: -5px;
+  }
+
+  &__btn--line::before {
+    left: -25px;
+  }
+
+  &__btn--line::after {
+    right: -25px;
+  }
+
+  &__title {
+    color: $title;
+    margin: 15px 0;
+    font-size: 22px;
+  }
+
+  &__price {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    @extend %roboto-400;
+  }
+
+  &__new-price {
+    color: $title;
+  }
+
+  &__old-price {
+    text-decoration: line-through;
+  }
+}
+
+.star {
+  margin: 0 auto;
+}
 
 // footer
 
